--- a/MyFitnessBuddy/public/css/style.css
+++ b/MyFitnessBuddy/public/css/style.css
@@ -14,3 +14,15 @@ nav a:hover{
 .subguys{
   font-size: 15px !important;
 }
+.navbar-default .navbar-nav>li>a, .navbar-default .navbar-text{
+  color: #fff !important;
+}
+.myHeader{
+  text-align: center;
+  width: 550px;
+  margin-top: 100px !important;
+  margin: 0 auto;
+}
+.myHeader h1{
+  font-size: 100px !important;
+}
